--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,10 +1,10 @@
-/* @import 'tailwindcss/base'; */
+@import 'tailwindcss/base';
 @import './prism.css';
-/* @import 'tailwindcss/components';
-@import 'tailwindcss/utilities'; */
-@tailwind base;
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
 @layer base {
   [inert] ::-webkit-scrollbar {
